Fix footer overlapping on containers

--- a/src/bdcgin/css/footer.css
+++ b/src/bdcgin/css/footer.css
@@ -7,7 +7,6 @@
     font-family: Helvetica, Arial, Sans-Serif;
     font-weight: 100;
     width: 100vw;
-    position:fixed;
     bottom:0;
     z-index:50000;
     font-size: 12px;
