--- a/src/css/App.css
+++ b/src/css/App.css
@@ -6,7 +6,8 @@
 }
 
 .App {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
     height: 100%;
 }
 
