--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -7,7 +7,6 @@
     text-align: right;
     font-family: Helvetica, Arial, Sans-Serif;
     font-weight: 100;
-    position: absolute;
     width: 100vw;
     bottom: 0;
     font-size: 12px;
